--- a/njsmti_app/templates/fmenu.html
+++ b/njsmti_app/templates/fmenu.html
@@ -38,6 +38,18 @@
             li a:active {
                 color: green;
             }
+            #logout{
+                background: red; 
+                color: white; 
+                padding: 5px; 
+
+                border-radius: 10px 20px; 
+                border: 3px solid #A50B5E;
+            }
+            #logout:hover{
+                background: white;
+                color: red;
+            }
         </style>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -70,8 +82,7 @@
                                 <li><a href="{% url 'syllabus' %}">SYLLABUS</a></li>
                                 <li><a href="{% url 'studentdata' %}">STUDENT_DATA</a></li>
                                 <li><a href="{% url 'material' %}">UPLOAD_MATERIAL</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                <li><a href = "{% url 'flogout' %}" style="background: red; color: white; ">LOGOUT</a></li>
-                                
+                                <li><a href = "{% url 'flogout' %}" id="logout">LOGOUT</a></li>
                             </ul>
                         </nav>
                     </center>
